# wsprrs-web

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build.rs  justfile
changelog/: 2026-03-10T000000-grid-clustering.md  2026-03-10T000000-initial-implementation.md  2026-03-10T010000-maidenhead-grid-overlay.md  2026-03-10T010000-ux-fixes.md  2026-03-11T000000-version-badge.md  2026-03-11T120000-sse-reconnect-backoff.md  2026-03-11T135351Z-filter-debounce-and-full-query-cache.md  2026-03-11T140000-callsign-ignore-list.md  2026-03-11T150000Z-band-dropdown-remove-spot-count-display.md  2026-03-11T160000Z-time-window-default-from-config.md  2026-03-12T130217Z-table-row-click-detail-zoom.md  2026-03-12T150000Z-fix-callsign-keyed-map-popup.md  2026-03-12T170000Z-fix-highlight-popup-animation-race.md  2026-03-12T180000Z-gridcenter-six-char-locator.md  2026-03-13T000000Z-global-spot-visualization.md  2026-03-13T120000Z-fix-spot-visibility-and-init-effect.md  2026-03-13T151529Z-fix-global-spots-unknown-table.md  2026-03-13T152000Z-fix-global-query-type-and-logging.md  2026-03-13T160000Z-fix-global-spots-type-casts.md  2026-03-13T161000Z-global-spot-limit-config.md  2026-03-13T162000Z-fix-filter-default-limit.md
kustomize/: deployment.yaml  env  ingress.yaml  kustomization.yaml  ns.yaml  service.yaml
memory/: MEMORY.md
public/: map.js
src/: app.rs  cache.rs  config.rs  error.rs  lib.rs  main.rs  server_fns.rs  sse.rs
src/components/: filter_panel.rs  live_badge.rs  map.rs  mod.rs  spot_table.rs  stats_bar.rs
src/db/: queries.rs
src/models/: filter.rs  grid.rs  mod.rs  spot.rs
style/: main.scss
