[package]
name = "wsprrs-web"
version = "0.1.8"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Leptos framework
leptos = { version = "0.8.0", features = ["nightly"] }
leptos_router = { version = "0.8.0", features = ["nightly"] }
leptos_meta = { version = "0.8.0" }

# SSR web server
axum = { version = "0.8.0", features = ["macros"], optional = true }
leptos_axum = { version = "0.8.0", optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

# WASM entry point
console_error_panic_hook = { version = "0.1", optional = true }
wasm-bindgen = { version = "0.2.106", optional = true }

# Shared (SSR + WASM): serialization and error handling
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
chrono = { version = "0.4", features = ["serde"] }

# SSR-only: ClickHouse, infrastructure, observability
clickhouse = { version = "0.12", optional = true }
anyhow = { version = "1", optional = true }
dotenvy = { version = "0.15", optional = true }
tower = { version = "0.5", features = ["util"], optional = true }
tower-http = { version = "0.6", features = ["compression-gzip", "trace", "cors"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"], optional = true }
tokio-stream = { version = "0.1", optional = true }
async-stream = { version = "0.3", optional = true }

# Hydrate-only: WASM/JS interop for Leaflet map and SSE client
web-sys = { version = "0.3", features = [
    "Window", "EventSource", "MessageEvent", "EventTarget",
    "HtmlElement", "Document", "console",
], optional = true }
js-sys = { version = "0.3", optional = true }

[features]
hydrate = [
    "leptos/hydrate",
    "dep:console_error_panic_hook",
    "dep:wasm-bindgen",
    "dep:web-sys",
    "dep:js-sys",
]
ssr = [
    "dep:axum",
    "dep:tokio",
    "dep:leptos_axum",
    "leptos/ssr",
    "leptos_meta/ssr",
    "leptos_router/ssr",
    "dep:clickhouse",
    "dep:anyhow",
    "dep:dotenvy",
    "dep:tower",
    "dep:tower-http",
    "dep:tracing",
    "dep:tracing-subscriber",
    "dep:tokio-stream",
    "dep:async-stream",
]

# Optimized WASM bundle for release builds
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.leptos]
output-name = "wsprrs-web"
site-root = "target/site"
site-pkg-dir = "pkg"
style-file = "style/main.scss"
assets-dir = "public"
site-addr = "127.0.0.1:3000"
reload-port = 3001
end2end-cmd = "npx playwright test"
end2end-dir = "end2end"
browserquery = "defaults"
env = "DEV"
bin-features = ["ssr"]
bin-default-features = false
lib-features = ["hydrate"]
lib-default-features = false
lib-profile-release = "wasm-release"
